# projekt-neutralteam

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PROGRAMM  README.md  TEST  a  b  cmake_install.cmake  compile.sh  directNeighbors.c  directNeighbors.cpp  directNeighbors.h  directNeighbors.hpp  enterStudents.c  enterStudents.cpp  enterStudents.h  enterStudents.hpp  indirectNeighbors.c  indirectNeighbors.cpp  indirectNeighbors.h  indirectNeighbors.hpp  loadRoom.c  loadRoom.cpp  loadRoom.h  loadRoom.hpp  main.c  main.cpp  main.h  main.hpp  menu.c  menu.cpp  menu.h  newRoom.c  newRoom.cpp  newRoom.h  newRoom.hpp  placeAssignment.c  queryStudents.c  (+12 more)
